--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap');
 
-// @tailwind base;
-// @tailwind components;
-// @tailwind utilities;
-
 html,
 body {
     height: 100vh;
     width: 100vw;
     font-family: 'Nunito', sans-serif;
     overflow: hidden auto;
+    background-image: url('/images/filigrane.svg');
+    background-position: top left;
+    background-repeat: no-repeat;
+    background-size: auto;
 }
 
 .section-container {
