gestion de la pagination des tutoriles

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -10,6 +10,7 @@ body {
     background-position: top left;
     background-repeat: no-repeat;
     background-size: auto;
+    scroll-behavior: smooth;
 }
 
 .section-container {
