Page de formation

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -44,3 +44,46 @@ body {
     backdrop-filter: blur(20px);
     border-radius: 10px;
 }
+
+.formation-item {
+    position: relative;
+    .f1,
+    .f2 {
+        z-index: 3;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background: rgba(243, 244, 246, 1);
+        border: 1px solid rgba(139, 92, 246, 0.25);
+        transform: perspective(500px) translate3d(3px, 3px, 0);
+        z-index: -2;
+        border-radius: 5px;
+        transition: .3s;
+    }
+    .f2{
+        z-index: -3;
+        transform: perspective(500px) translate3d(6px, 6px, 0);
+    }
+    &:hover{
+        z-index: 10;
+        transform: scale(1.01);
+        .f1{
+            transform: rotate3d(1, 1, 1, -10deg);
+            box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
+        }
+        .f2{
+            transform: rotate3d(1, 1, 1, -20deg);
+            box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
+        }
+        .f3{
+            box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
+        }
+    }
+    &:active, &:focus{
+        .f1, .f2, .f3{
+            border-color:rgba(139, 92, 246, .7);
+        }
+    }
+}
