--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -9,7 +9,7 @@ body {
     background-image: url('/images/filigrane.svg');
     background-position: top left;
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: 550px;
     scroll-behavior: smooth;
 }
 
@@ -17,7 +17,7 @@ body {
     .section-cainter-header {
         box-shadow: inset -4px -4px 10px rgba(0, 0, 0, 0.25), inset 4px 4px 10px #ebebeb;
         filter: drop-shadow(4px 4px 10px #c4c4c4);
-        backdrop-filter: blur(20px);
+        backdrop-filter: blur(5px);
         background: rgba(141, 255, 255, 0.19);
         color: #00c0c0;
         border-radius: 30px;
@@ -33,7 +33,7 @@ body {
     .section-container-content {
         background: rgba(229, 229, 229, 0.26);
         box-shadow: 4px 4px 10px #c4c4c4, inset -4px -4px 10px #c4c4c4, inset 4px 4px 10px #e0e0e0;
-        backdrop-filter: blur(20px);
+        backdrop-filter: blur(5px);
         border-radius: 10px;
     }
 }
@@ -41,7 +41,7 @@ body {
 .abonne-container {
     background: rgba(255, 255, 255, 0.2);
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25), inset 4px 4px 10px #ebebeb, inset -4px -4px 10px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(20px);
+    backdrop-filter: blur(5px);
     border-radius: 10px;
 }
 
@@ -60,30 +60,71 @@ body {
         transform: perspective(500px) translate3d(3px, 3px, 0);
         z-index: -2;
         border-radius: 5px;
-        transition: .3s;
+        transition: 0.3s;
     }
-    .f2{
+    .f2 {
         z-index: -3;
         transform: perspective(500px) translate3d(6px, 6px, 0);
     }
-    &:hover{
+    &:hover {
         z-index: 10;
         transform: scale(1.01);
-        .f1{
+        .f1 {
             transform: rotate3d(1, 1, 1, -10deg);
             box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
         }
-        .f2{
+        .f2 {
             transform: rotate3d(1, 1, 1, -20deg);
             box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
         }
-        .f3{
+        .f3 {
             box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
         }
     }
-    &:active, &:focus{
-        .f1, .f2, .f3{
-            border-color:rgba(139, 92, 246, .7);
+    &:active,
+    &:focus {
+        .f1,
+        .f2,
+        .f3 {
+            border-color: rgba(139, 92, 246, 0.7);
+        }
+    }
+}
+
+.login-container {
+    background: rgba(255, 255, 255, 0.03);
+    border: 1px solid rgba(225, 201, 255, 0.19);
+    box-sizing: border-box;
+    box-shadow: 1px 1px 10px rgba(54, 0, 122, 0.19), inset -4px -4px 20px rgba(54, 0, 122, 0.19),
+        inset 4px 4px 20px rgba(144, 98, 199, 0.19);
+    backdrop-filter: blur(5px);
+    border-radius: 10px;
+}
+
+
+/**
+DRAWER CONTENT
+@author Ronald Tchuekou
+*/
+.drawer_content {
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+    .drawer {
+        transition: transform 0.4s;
+        transform: translate3d(0, 0, 0);
+        height: 100%;
+        overflow: hidden;
+
+        &::after {
+            content: '';
+            clear: both;
+            display: table;
+        }
+
+        .drawer__item {
+            float: left;
+            height: 100%;
         }
     }
 }
