Ajout de la page detail de formation

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -66,26 +66,21 @@ body {
         z-index: -3;
         transform: perspective(500px) translate3d(6px, 6px, 0);
     }
+    &:active,
+    &:focus,
     &:hover {
         z-index: 10;
-        .f1 {
-            transform: rotate3d(1, 1, 1, -10deg);
-            box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
-        }
-        .f2 {
-            transform: rotate3d(1, 1, 1, -20deg);
-            box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
-        }
-        .f3 {
-            box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
-        }
-    }
-    &:active,
-    &:focus {
         .f1,
         .f2,
         .f3 {
             border-color: rgba(139, 92, 246, 0.7);
+            box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
+        }
+        .f1 {
+            transform: rotate3d(1, 1, 1, -10deg);
+        }
+        .f2 {
+            transform: rotate3d(1, 1, 1, -20deg);
         }
     }
 }
@@ -99,7 +94,6 @@ body {
     backdrop-filter: blur(5px);
     border-radius: 10px;
 }
-
 
 /**
 DRAWER CONTENT
