--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -121,3 +121,11 @@ DRAWER CONTENT
         }
     }
 }
+
+.card-info {
+    max-width: 200px;
+    background: rgba(236, 220, 255, 0.1);
+    box-shadow: 4px 4px 10px rgba(54, 0, 122, 0.19), inset 4px 4px 10px rgba(225, 201, 255, 0.19),
+        inset -4px -4px 10px rgba(54, 0, 122, 0.19);
+    backdrop-filter: blur(5px);
+}
