--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,6 +7,7 @@ body {
     font-family: 'Nunito', sans-serif;
     overflow: hidden auto;
     background-image: url('/images/filigrane.svg');
+    background-color: rgba(54, 0, 122, 0.05);
     background-position: top left;
     background-repeat: no-repeat;
     background-size: 550px;
